--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,11 @@
-[workspace]
-members = [
-    "web-client-driver"
-]
+[package]
+name = "web-driver"
+version = "0.1.0"
+edition = "2021"
+
+[dependencies]
+fantoccini = { version = "0.19", features = [ "rustls-tls" ] }
+serde_json = "1"
+
+[dev-dependencies]
+tokio = { version = "1", features = ["full"] }
