--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,11 @@
 name = "web-driver"
 version = "0.1.0"
 edition = "2021"
+authors = ["David de Mingo <david@optersoft.com>"]
 
 [dependencies]
 fantoccini = { version = "0.19", features = [ "rustls-tls" ] }
 serde_json = "1"
 
 [dev-dependencies]
-tokio = { version = "1", features = ["full"] }
+tokio = {version = "1", features = ["macros","rt"] }
